<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mainLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/scene_1"
                android:adjustViewBounds="true"
                android:contentDescription="TODO"
                />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/headings"
                android:layout_margin="8dp"
                android:textSize="35sp"
                android:textFontWeight="400"
                />
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="8dp"
                >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/by"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:textFontWeight="300"
                    android:layout_marginRight="4dp"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/developer_name"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:textFontWeight="300"
                    />
        </LinearLayout>
        <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
            <androidx.cardview.widget.CardView
                    android:id="@+id/versionCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    android:visibility="visible"
                    >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/version_outdated"
                            android:textSize="20sp"
                            android:textColor="@color/headings"
                            android:layout_marginTop="8dp"
                            />
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/install_updates_to_continue"
                            android:textSize="15sp"
                            />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="8dp">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/current"
                                android:textColor="@color/headings"
                                android:textFontWeight="500"
                                />
                        <TextView
                                android:id="@+id/currentVerison"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="2.0.3"
                                android:layout_marginLeft="8dp"/>

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="8dp">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/latest"
                                android:textColor="@color/headings"
                                android:textFontWeight="500"
                                />
                        <TextView
                                android:id="@+id/latestVerison"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="2.0.3"
                                android:layout_marginLeft="8dp"/>

                    </LinearLayout>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_margin="8dp"
                            android:gravity="center">
                        <com.google.android.material.button.MaterialButton
                                android:id="@+id/downloadInstallButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/install"
                                android:backgroundTint="@color/color_accent"
                                android:textColor="@color/color_accent_text"
                                app:cornerRadius="16dp"
                                />
                        <com.google.android.material.button.MaterialButton
                                android:id="@+id/viewChangelogButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/changelog"
                                android:textColor="@color/headings"
                                app:cornerRadius="16dp"
                                style="@android:style/Widget.Material.Button.Borderless"
                                />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp"/>
            <androidx.cardview.widget.CardView
                    android:id="@+id/rootCheckCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    android:visibility="gone">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/root_and_safety_net_checks"
                            android:textSize="20sp"
                            android:textColor="@color/headings"
                            android:layout_marginTop="8dp"
                            />
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/this_device_s_integrity_may_be_compromised"
                            android:textSize="15sp"
                            />
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="8dp">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/root_status"
                                android:textColor="@color/headings"
                                android:textFontWeight="500"
                                android:layout_marginRight="8dp"
                                />
                        <ImageView
                                android:id="@+id/rootCheck"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:src="@drawable/baseline_verified_24"
                                />

                    </LinearLayout>
                    <com.google.android.material.progressindicator.CircularProgressIndicator
                            android:id="@+id/safetyNetProgress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:indeterminate="true"
                            android:layout_gravity="center"
                            android:progressTint="@color/color_accent"/>
                    <LinearLayout
                            android:id="@+id/safetyNetSection"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:visibility="gone">
                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginTop="8dp">
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/basic_integrity"
                                    android:textColor="@color/headings"
                                    android:textFontWeight="500"
                                    android:layout_marginRight="8dp"
                                    />
                            <ImageView
                                    android:id="@+id/basicIntegrity"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:src="@drawable/baseline_remove_circle_24"
                                    />

                        </LinearLayout>
                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginTop="8dp">
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/cts_profile"
                                    android:textColor="@color/headings"
                                    android:textFontWeight="500"
                                    android:layout_marginRight="8dp"
                                    />
                            <ImageView
                                    android:id="@+id/ctsProfile"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:src="@drawable/baseline_cancel_24"
                                    />

                        </LinearLayout>
                    </LinearLayout>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/incorrect_info_contact"
                            android:layout_marginTop="24dp"
                            android:layout_margin="8dp"
                            />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>